@@ -354,8 +354,41 @@ ConvertibleZeroCouponBond <- function(bondparams, process, dateparams){
     UseMethod("ConvertibleZeroCouponBond")
 }
 
-ConvertibleZeroCouponBond.default <- function(bondparams, process, dateparams){
+ConvertibleZeroCouponBond.default <- function(bondparams,
+                                              process,
+                                              dateparams=list(
+                                                settlementDays=1,
+                                                calendar='us',
+                                                dayCounter='Thirty360',
+                                                period='Semiannual',
+                                                businessDayConvention='Following'
+                                                )
+                                              )
+{
     val <- 0
+
+
+    if (is.null(bondparams$exercise)){bondparams$exercise='am'}
+    if (is.null(bondparams$faceAmount)){bondparams$faceAmount=100}
+    if (is.null(bondparams$redemption)){bondparams$redemption=100}
+    if (is.null(bondparams$divSch)){
+      bondparams$divSch = data.frame(Type=character(0), Amount=numeric(0),
+        Rate = numeric(0), Date = as.Date(character(0)))
+    }
+    if (is.null(bondparams$callSch)){
+      bondparams$callSch = data.frame(Price=numeric(0), Type=character(0),
+        Date=as.Date(character(0)))
+    }
+    
+    
+    if (is.null(dateparams$settlementDays)){dateparams$settlementDays=1}
+    if (is.null(dateparams$calendar)){dateparams$calendar='us'}
+    if (is.null(dateparams$businessDayConvention)){
+      dateparams$businessDayConvention='Following'
+    }    
+    if (is.null(dateparams$dayCounter)){dateparams$dayCounter='Thirty360'}
+    if (is.null(dateparams$period)){dateparams$period='Semiannual'}
+    
     dateparams <- matchParams(dateparams)
     callabilitySchedule <- bondparams$callSch
     dividendSchedule <- bondparams$divSch
@@ -380,8 +413,41 @@ ConvertibleFixedCouponBond <- function(bondparams, coupon, process, dateparams){
     UseMethod("ConvertibleFixedCouponBond")
 }
 
-ConvertibleFixedCouponBond.default <- function(bondparams, coupon, process, dateparams){
+ConvertibleFixedCouponBond.default <- function(bondparams,
+                                               coupon,
+                                               process,
+                                               dateparams=list(
+                                                 settlementDays=1,
+                                                 calendar='us',
+                                                 dayCounter='Thirty360',
+                                                 period='Semiannual',
+                                                 businessDayConvention='Following'
+                                                 )
+                                               ){
+  
     val <- 0
+
+    if (is.null(bondparams$exercise)){bondparams$exercise='am'}
+    if (is.null(bondparams$faceAmount)){bondparams$faceAmount=100}
+    if (is.null(bondparams$redemption)){bondparams$redemption=100}
+    if (is.null(bondparams$divSch)){
+      bondparams$divSch = data.frame(Type=character(0), Amount=numeric(0),
+        Rate = numeric(0), Date = as.Date(character(0)))
+    }
+    if (is.null(bondparams$callSch)){
+      bondparams$callSch = data.frame(Price=numeric(0), Type=character(0),
+        Date=as.Date(character(0)))
+    }
+    
+       
+    if (is.null(dateparams$settlementDays)){dateparams$settlementDays=1}
+    if (is.null(dateparams$calendar)){dateparams$calendar='us'}
+    if (is.null(dateparams$businessDayConvention)){
+      dateparams$businessDayConvention='Following'
+    }    
+    if (is.null(dateparams$dayCounter)){dateparams$dayCounter='Thirty360'}
+    if (is.null(dateparams$period)){dateparams$period='Semiannual'}
+    
     dateparams <- matchParams(dateparams)
     callabilitySchedule <- bondparams$callSch
     dividendSchedule <- bondparams$divSch
